# qtmessage

./: .gitignore  CMakeLists.txt
qtmessage/: CMakeLists.txt  main.cpp  private.example.h
qtmessagelib/: CMakeLists.txt  qtmessagelib_global.h  sms.cpp  sms.h
